2005-01-18  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBase.cs MonoMethod.cs: Implement 2.0 GetMethodBody ().

2005-01-03  Martin Baulig  <martin@ximian.com>

	* MonoGenericMethod.cs
	(MonoGenericMethod.get_reflected_type): Removed.
	(MonoGenericMethod.ReflectedType): Make this an icall.
	(MonoGenericCMethod.ReflectedType): Likewise.	

2004-12-29  Martin Baulig  <martin@ximian.com>

	* MonoGenericMethod.cs: New file.

2004-12-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* Assembly.cs: Added private LoadAssemblyPermissions to get the 
	declarative security permission sets (minimum, optional and refused)
	for the assembly.

2004-12-20  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Removed old Demand support (moved in System.Security).

2004-12-16  Zoltan Varga  <vargaz@freemail.hu>

	* CustomAttributeData.cs MethodBody.cs: Reenable some 2.0 code now that
	the gmcs bugs blocking them are fixed.

2004-12-08  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Move corlib_internal field to AssemblyBuilder.

2004-12-06  Zoltan Varga  <vargaz@freemail.hu>

	* Assembly.cs: Add corlib_internal field.

2004-11-30  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs: Renamed to MonoGenericClass.cs and also
	renamed the class from `MonoGenericInst' to `MonoGenericClass'.

2004-11-05  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyName.cs (FullName): Omit default values from full name.

	* Assembly.cs: Implement GetFiles (bool).

	* Binder.cs: Add support for byref types. Fixes #69140.

2004-10-12  Martin Baulig  <martin@ximian.com>

	* MonoGenericInst.cs (MonoGenericInst): Call initialize() just
	before calling the *_internal() methods.

2004-10-12  Zoltan Varga  <vargaz@freemail.hu>

	* MethodBody.cs: Implement this.

2004-10-08  Zoltan Varga  <vargaz@freemail.hu>

	* Module.cs: Handle the case when the global type does not exists.

2004-10-03  Zoltan Varga  <vargaz@freemail.hu>

	* LocalVariableInfo.cs: Reorganize fields so LocalBuilder can inherit